--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media (prefers-color-scheme: dark) {
+    .label {
+        background-color: var(--dark-color);
+        color: var(--light-color);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .label {
+        background-color: var(--light-color);
+        color: var(--dark-color);
+    }
+}
